# rust-web-sample

./: .env.dev  .gitignore  Cargo.toml  diesel.toml
.cursor/: mcp.json
.cursor/rules/: git-commit.mdc
docs/: ide-troubleshooting.md
migrations/2025-05-27-134405_create_demo/: down.sql  up.sql
migrations/2025-10-28-063507-0000_create_post/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/public/: public_info_api.rs
src/constants/: error_code_const.rs  mod.rs
src/core/: mod.rs  root_state.rs
src/enums/errors/: common_error.rs
src/errors/: business_error.rs  error_types.rs  mod.rs
src/models/: mod.rs
src/models/entities/forum/: post.rs
src/models/entities/user/: user.rs
src/models/params/forum/: mod.rs  post_create_param.rs  post_detail_param.rs  post_list_param.rs
src/models/responses/: response.rs
src/repository/: mod.rs
src/routes/: mod.rs
src/routes/forum/: post_api.rs
src/routes/public/: mod.rs  public_auth_api.rs  public_info_api.rs
src/routes/user/: user_api.rs
src/services/: mod.rs
src/services/forum/: mod.rs  post_service.rs  post_service_impl.rs
src/services/user/: user_service.rs
src/shared/: mod.rs
src/web/: mod.rs
src/web/public/: public_auth_api.rs
src/web/user/: user_api.rs
