[package]
name = "rust-web-sample"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true
opt-level = 0
lto = false
codegen-units = 256
incremental = true

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "compression-br", "catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }
diesel = { version = "2.3.2", features = ["mysql", "r2d2"] }
mysqlclient-sys = { version = "0.4.7", features = ["buildtime_bindgen"] }
dotenvy = "0.15"
clap = { version = "4.0", features = ["derive"] }
openssl = "0.10"